# osp

./: .gitignore  Cargo.toml  README.md  space-browser-initial
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-23T00-52-28-282Z.yml  page-2026-06-23T00-53-52-367Z.yml  page-2026-06-23T00-54-34-721Z.yml
crates/osp-analyzer/: Cargo.toml
crates/osp-cli/: Cargo.toml  test-proposals.json
crates/osp-cli/src/: analysis_bridge.rs  canonical_identity.rs  errors.rs  evidence_projection.rs  graph_seed_builder.rs  identity_bridge.rs  main.rs  metric_projection.rs  mock_llm.rs  review_session.rs  seed_file.rs  store_io.rs
crates/osp-cli/src/application/: review.rs
crates/osp-cli/src/commands/: graph.rs  mod.rs  resolve_code_entity_preview_render.rs  review.rs  supersede_preview_render.rs
crates/osp-cli/tests/: analyze_bridge_flow.rs  architecture_guards.rs  preview_flow.rs  resolution_flow.rs  supersede_flow.rs
crates/osp-core/: Cargo.toml
docs/: STATUS.md  agent-trajectory-roadmap.md  concept-anchoring-design.md  corpus28-results.md  inv-t9-70-commit3-final-handoff.md  inv-t9-70-commit4b-faz3-kickoff.md  inv-t9-70-commit4b-faz3-plan.md  inv-t9-70-pr69-body-update.md  inv-t9-commit1-amend-tur2-handoff.md  inv-t9-step4b-plan.md  invariant-spec.md  paper-draft-v2.5-edited.md  paper-draft-v2.6.md  paper3-draft-v1.md  roadmap.md  ui-design.md  usage-dogfooding.md  usage-evidence-plan.md  usage-llm-benchmark-multi.json  usage-llm-benchmark.json
scripts/: llm-token-bench.ps1  md_to_latex.py  reproduce-corpus.sh
viz/: space-browser.html
(+143 files in other folders)
