[package]
name = "osp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "osp"
path = "src/main.rs"

[dependencies]
osp-core = { path = "../osp-core" }
osp-analyzer = { path = "../osp-analyzer" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
